[package]
name = "bytevec"
version = "0.1.0"
authors = ["Fernando Ulloa <fjulloap23@gmail.com>"]
description = "A Rust serialization library that uses byte vectors"
licence = "Apache-2.0/MIT"
repository = "https://github.com/fero23/bytevec"
documentation = "http://fero23.github.io/doc/bytevec/"
readme = "README.md"
keywords = ["serializing", "byte", "vector", "binary"]

[dependencies]
